k8gb/tmp-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-gslb-failover
  namespace: k8gb
  labels:
    app: failover
spec:
  ingressClassName: nginx
  rules:
    - host: cloudflare-test.namutech.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myapp
              port:
                number: 80
